Create Counter component without bugs
Signed-off-by: soliddev312 <hitgoal312@gmail.com>

--- a/counter/package.json
+++ b/counter/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "expo": "^21.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-21.0.2.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-21.0.2.tar.gz",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-types-creator": "0.0.9"
   }
 }
